--- a/index.html
+++ b/index.html
@@ -10,8 +10,10 @@
             <h1>Welcome to my Web page</h1>
         </header>
         <nav>
-            <a href="#about.html">About Us</a> |
-            <a href="#services">Services</a>
+            <ul>
+                <li><a href="#about">About</a></li>
+                <li><a href="#contact">Contact</a></li>
+            </ul>
         </nav>
         <section id="about">
         <h2>Improving health Services</h2>
